--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
 <body>
   <nav class="navbar">
     <div class="navbar-container">
+      <a href="index.html">
+        <i class="fa-solid fa-broom navbar-brand-icon"></i>
+      </a>
       <div class="contact-links">
         <a href="https://instagram.com/safisharugs" target="_blank" title="Instagram">
-          <i class="fa-brands fa-whatsapp"></i>
+          <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://wa.me/254700000000" target="_blank" title="WhatsApp">
+        <a href="https://wa.me/254114233551" target="_blank" title="WhatsApp">
           <i class="fa-brands fa-whatsapp contact-icon"></i>
         </a>
-        <a href="tel:+254700000000" title="Call">
-          <img src="assets/telephone.png" alt="Call" class="contact-icon" width="24" height="24" />
+        <a href="tel:+254114233551" title="Call">
+          <i class="fa-solid fa-phone contact-icon"></i>
         </a>
       </div>
-      <i class="fa-solid fa-broom navbar-brand-icon"></i>
       <div class="navbar-logo">Safisha Rugs</div>
+      <span class="navbar-divider"></span>
       <ul class="navbar-links">
         <li><a href="index.html" class="nav-link active">Home</a></li>
         <li><a href="about.html" class="nav-link">About</a></li>
@@ -43,7 +46,7 @@
     <div class="hero-content">
       <h1>We Bring Your Carpets Back to Life</h1>
       <p>Welcome to Safisha Rugs, your trusted local carpet cleaning experts in Kabarnet. We specialize in deep cleaning carpets, sofas, and mattresses, ensuring a healthier, fresher home for you and your family.</p>
-      <a href="#contact" class="btn-primary">Request a Free Pick Up</a>
+      <a href="https://wa.me/254114233551" class="btn-primary" target="_blank">Request a Free Pick Up</a>
     </div>
   </header>
 
@@ -68,14 +71,18 @@
   <section class="materials-section">
     <h2>Materials We Handle</h2>
     <div class="materials-list">
-      <div class="material-item">Wool Carpets</div>
-      <div class="material-item">Synthetic Carpets</div>
-      <div class="material-item">Persian Rugs</div>
-      <div class="material-item">Shaggy Rugs</div>
-      <div class="material-item">Sofas & Upholstery</div>
-      <div class="material-item">Mattresses</div>
-      <div class="material-item">Curtains</div>
-      <div class="material-item">Car Seats</div>
+      <div class="material-card material-anim-flip">
+        <div class="material-front">Carpets and Rugs</div>
+        <div class="material-info" style="--info-color: #8B6F4E;">We clean all types of carpets and area rugs, from wool to synthetics.</div>
+      </div>
+      <div class="material-card material-anim-flip">
+        <div class="material-front">Car carpets and mats</div>
+        <div class="material-info" style="--info-color: #8B6F4E;">We deep clean car carpets and mats, removing dirt and odors for a fresh drive.</div>
+      </div>
+      <div class="material-card material-anim-flip">
+        <div class="material-front">Upholstery</div>
+        <div class="material-info" style="--info-color: #8B6F4E;">We handle sofas, mattresses, and other upholstery, making them spotless and hygienic.</div>
+      </div>
     </div>
   </section>
 
@@ -160,6 +167,18 @@
     nextBtn.addEventListener('click', () => {
       current = (current + 1) % testimonials.length;
       showTestimonial(current);
+    });
+
+    // Per-card animation logic
+    const cards = document.querySelectorAll('.material-card');
+    cards.forEach(card => {
+      const info = card.querySelector('.material-info');
+      card.addEventListener('mouseenter', () => {
+        card.classList.add('show-info');
+      });
+      card.addEventListener('mouseleave', () => {
+        card.classList.remove('show-info');
+      });
     });
   </script>
 </body>
