--- a/about.html
+++ b/about.html
@@ -3,28 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Safisha Rugs</title>
+  <title>About Us | Safisha Rugs</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
   <nav class="navbar">
     <div class="navbar-container">
-      <i class="fa-solid fa-broom navbar-brand-icon"></i>
+      <a href="index.html">
+        <i class="fa-solid fa-broom navbar-brand-icon"></i>
+      </a>
       <div class="contact-links">
         <a href="https://instagram.com/safisharugs" target="_blank" title="Instagram">
-          <img src="assets/instagram.png" alt="Instagram" class="contact-icon" width="24" height="24" />
+          <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://wa.me/254700000000" target="_blank" title="WhatsApp">
-          <img src="assets/whatsapp.png" alt="WhatsApp" class="contact-icon" width="24" height="24" />
+        <a href="https://wa.me/254114233551" target="_blank" title="WhatsApp">
+          <i class="fa-brands fa-whatsapp contact-icon"></i>
         </a>
-        <a href="tel:+254700000000" title="Call">
-          <img src="assets/phone.png" alt="Call" class="contact-icon" width="24" height="24" />
+        <a href="tel:+254114233551" title="Call">
+          <i class="fa-solid fa-phone contact-icon"></i>
         </a>
       </div>
-      <div class="navbar-logo">Safisha Rugs</div>
+      <a class="navbar-logo" href="index.html">
+        <div>Safisha Rugs</div>
+      </a>
+      <span class="navbar-divider"></span>
       <ul class="navbar-links">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="about.html" class="nav-link active">About</a></li>
@@ -42,13 +48,39 @@
   <section class="about-hero">
     <div class="about-hero-overlay">
       <h1>Learn more about us</h1>
+      <div class="about-hero-subtitle">Your trusted partner for a cleaner, healthier home and business.</div>
+    </div>
+    <div class="about-hero-wave">
+      <svg viewBox="0 0 1440 120" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+        <path d="M0,80 C360,160 1080,0 1440,80 L1440,120 L0,120 Z" fill="url(#waveGradient)" opacity="0.7">
+          <animate attributeName="d" dur="3s" repeatCount="indefinite"
+            values="M0,80 C360,160 1080,0 1440,80 L1440,120 L0,120 Z;
+                    M0,60 C400,120 1040,40 1440,100 L1440,120 L0,120 Z;
+                    M0,80 C360,160 1080,0 1440,80 L1440,120 L0,120 Z" />
+        </path>
+        <defs>
+          <linearGradient id="waveGradient" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#eafaf1" />
+            <stop offset="100%" stop-color="#fff" />
+          </linearGradient>
+        </defs>
+      </svg>
     </div>
   </section>
 
   <main class="about-main">
     <section class="about-summary">
-      <h2>Our Operation</h2>
-      <p>Safisha Rugs is Kabarnet’s trusted partner for professional carpet, rug, and upholstery cleaning. We offer a seamless experience from free pickup to expert cleaning and prompt delivery. Our team uses modern equipment and eco-friendly products to ensure your home or business is fresh, healthy, and spotless. Whether you need domestic, commercial, or on-the-go cleaning, we’re here to serve you with a smile.</p>
+      <div class="about-summary-columns">
+        <div class="about-summary-col about-summary-catch">
+          <span class="catch-phrase">We Bring Your Carpets Back to Life</span>
+        </div>
+        <div class="about-summary-col about-summary-img">
+          <img src="assets/carpet-washer.jpg" alt="Safisha Rugs cleaning" style="width:180px;height:180px;border-radius:16px;object-fit:cover;box-shadow:0 2px 12px rgba(139,111,78,0.13);">
+        </div>
+        <div class="about-summary-col about-summary-text">
+          <span class="summary-small">Safisha Rugs is Kabarnet’s trusted partner for professional carpet, rug, and upholstery cleaning. We offer a seamless experience from free pickup to expert cleaning and prompt delivery. Our team uses modern equipment and eco-friendly products to ensure your home or business is fresh, healthy, and spotless. Whether you need domestic, commercial, or on-the-go cleaning, we’re here to serve you with a smile.</span>
+        </div>
+      </div>
     </section>
 
     <section class="about-why">
@@ -74,51 +106,65 @@
 
     <section class="about-stats">
       <div class="about-stats-card">
-        <div class="about-stats-number">2020</div>
-        <div class="about-stats-label">Year Started</div>
+        <div class="about-stats-number spin-animate" id="stat-years" data-target="3">3</div>
+        <div class="about-stats-label">Year Operational</div>
       </div>
       <div class="about-stats-card">
-        <div class="about-stats-number">500+</div>
+        <div class="about-stats-number spin-animate" id="stat-clients" data-target="500+">500+</div>
         <div class="about-stats-label">Happy Clients</div>
       </div>
       <div class="about-stats-card">
-        <div class="about-stats-number">30+</div>
+        <div class="about-stats-number spin-animate" id="stat-commercial" data-target="30+">30+</div>
         <div class="about-stats-label">Commercial Clients</div>
       </div>
     </section>
-
-    <section class="about-reviews">
+    <div class="about-cta-centered">
+      <a href="https://wa.me/254114233551" class="btn-secondary" target="_blank">Request a Free Pick Up</a>
+    </div>
+    
+    <section class="testimonials slide-up">
       <h2>What Our Customers Say</h2>
       <div class="testimonial-slider">
         <div class="testimonial active">
-          <p>"Safisha Rugs exceeded my expectations! My carpets look and smell amazing. Highly recommended."</p>
-          <span>- Alice M., Kabarnet</span>
+          <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
+          <p>"Safisha Rugs did an <span class='highlight'>amazing job</span> on my carpets! They look brand new. <span class='highlight'>Highly recommend</span> their services."</p>
+          <span>- Mary K., Kabarnet</span>
         </div>
         <div class="testimonial">
-          <p>"Very professional and convenient. The free pickup and delivery made everything so easy."</p>
-          <span>- Peter K., Kabarnet</span>
+          <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
+          <p>"Professional, friendly, and efficient. My sofa and mattress have never been cleaner!"</p>
+          <span>- John L., Kabarnet</span>
         </div>
         <div class="testimonial">
-          <p>"Great value for money and excellent customer service. Will use again!"</p>
-          <span>- Janet W., Kabarnet</span>
+          <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
+          <p>"Booking was easy and the results were fantastic. Will definitely use Safisha Rugs again."</p>
+          <span>- Grace T., Kabarnet</span>
         </div>
-        <button class="slider-btn prev">&#10094;</button>
-        <button class="slider-btn next">&#10095;</button>
-      </div>
-      <div class="about-cta">
-        <a href="#contact" class="btn-primary">Request a Free Pick Up</a>
+        <button class="slider-btn prev" aria-label="Previous testimonial">&#10094;</button>
+        <button class="slider-btn next" aria-label="Next testimonial">&#10095;</button>
+        <div class="testimonial-dots">
+          <span class="dot active" data-index="0"></span>
+          <span class="dot" data-index="1"></span>
+          <span class="dot" data-index="2"></span>
+        </div>
       </div>
     </section>
-  </main>
-
-  <footer id="contact">
-    <div class="footer-contacts">
-      <a href="tel:+254700000000">Call: +254 700 000 000</a> |
-      <a href="mailto:info@safisharugs.co.ke">Email: info@safisharugs.co.ke</a> |
-      <a href="https://wa.me/254700000000" target="_blank">WhatsApp</a>
-    </div>
-    <p>&copy; 2025 Safisha Rugs, Kabarnet. All rights reserved.</p>
-  </footer>
+  
+    <footer id="contact">
+      <div class="footer-contacts">
+        <a href="tel:+254114233551"><i class="fa-solid fa-phone"></i> Call: 0114233551</a> |
+        <a href="mailto:info@safisharugs.co.ke"><i class="fa-solid fa-envelope"></i> Email: info@safisharugs.co.ke</a> |
+        <a href="https://wa.me/254114233551" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
+      </div>
+      <div class="footer-socials">
+        <a href="https://instagram.com/safisharugs" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://wa.me/254114233551" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="mailto:info@safisharugs.co.ke" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+      </div>
+      <button class="back-to-top" onclick="window.scrollTo({top:0,behavior:'smooth'});" aria-label="Back to top"><i class="fa-solid fa-arrow-up"></i></button>
+      <p>&copy; 2025 Safisha Rugs, Kabarnet. All rights reserved.</p>
+    </footer>
+  s</main>
 
   <script>
     // Navbar toggle for mobile
@@ -129,15 +175,19 @@
       navbarToggle.classList.toggle('active');
     });
 
-    // Simple testimonial slider
+    // Testimonial slider with navigation dots
     const testimonials = document.querySelectorAll('.testimonial');
     const prevBtn = document.querySelector('.slider-btn.prev');
     const nextBtn = document.querySelector('.slider-btn.next');
+    const dots = document.querySelectorAll('.testimonial-dots .dot');
     let current = 0;
 
     function showTestimonial(index) {
       testimonials.forEach((t, i) => {
         t.classList.toggle('active', i === index);
+      });
+      dots.forEach((d, i) => {
+        d.classList.toggle('active', i === index);
       });
     }
 
@@ -148,6 +198,81 @@
     nextBtn.addEventListener('click', () => {
       current = (current + 1) % testimonials.length;
       showTestimonial(current);
+    });
+    dots.forEach(dot => {
+      dot.addEventListener('click', () => {
+        current = parseInt(dot.getAttribute('data-index'));
+        showTestimonial(current);
+      });
+    });
+
+    // Per-card animation logic
+    const cards = document.querySelectorAll('.material-card');
+    cards.forEach(card => {
+      const info = card.querySelector('.material-info');
+      card.addEventListener('mouseenter', () => {
+        card.classList.add('show-info');
+      });
+      card.addEventListener('mouseleave', () => {
+        card.classList.remove('show-info');
+      });
+    });
+
+    // Animate sections on scroll (Intersection Observer)
+    const animatedSections = document.querySelectorAll('.fade-in, .slide-up');
+    const observer = new window.IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in-view');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.18 });
+    animatedSections.forEach(section => {
+      observer.observe(section);
+    });
+    // Add .in-view to trigger animation
+    // .fade-in.in-view and .slide-up.in-view will have opacity:1 and animate in
+
+    // Spin-in animation for stats
+    const statNumbers = document.querySelectorAll('.spin-animate');
+    const statObserver = new window.IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in-view');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.5 });
+    statNumbers.forEach(stat => {
+      statObserver.observe(stat);
+    });
+
+    // Count-up effect for stats
+    function animateCountUp(el, target, duration = 1200) {
+      let start = 0;
+      let startTime = null;
+      const isPlus = String(target).includes('+');
+      const isK = String(target).toLowerCase().includes('k');
+      const cleanTarget = parseInt(target.replace(/[^0-9]/g, ''));
+      function step(ts) {
+        if (!startTime) startTime = ts;
+        const progress = Math.min((ts - startTime) / duration, 1);
+        const value = Math.floor(progress * cleanTarget);
+        el.textContent = isK ? value + 'k' : value + (isPlus ? '+' : '');
+        if (progress < 1) {
+          requestAnimationFrame(step);
+        } else {
+          el.textContent = target;
+        }
+      }
+      requestAnimationFrame(step);
+    }
+    statNumbers.forEach(stat => {
+      stat.addEventListener('animationstart', () => {
+        const target = stat.getAttribute('data-target') || stat.textContent;
+        animateCountUp(stat, target);
+      }, { once: true });
     });
   </script>
 </body>
