--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Safisha Rugs - Kabarnet</title>
+  <title>Home | Safisha Rugs</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,9 @@
           <i class="fa-solid fa-phone contact-icon"></i>
         </a>
       </div>
-      <div class="navbar-logo">Safisha Rugs</div>
+      <a class="navbar-logo" href="index.html">
+        <div>Safisha Rugs</div>
+      </a>
       <span class="navbar-divider"></span>
       <ul class="navbar-links">
         <li><a href="index.html" class="nav-link active">Home</a></li>
@@ -50,43 +52,56 @@
     </div>
   </header>
 
-  <section class="about-section" id="about">
+  <section class="about-section fade-in" id="about">
     <h2>What We Offer</h2>
+    <div class="about-bg-shape"></div>
     <div class="about-types">
       <div class="about-type about-type-domestic">
+        <span class="about-type-icon"><i class="fa-solid fa-house-chimney"></i></span>
         <h3>Domestic Cleaning</h3>
         <p>Professional cleaning for homes, ensuring your family enjoys a clean and healthy environment.</p>
       </div>
       <div class="about-type about-type-commercial">
+        <span class="about-type-icon"><i class="fa-solid fa-building"></i></span>
         <h3>Commercial Cleaning</h3>
         <p>Reliable cleaning services for offices, hotels, and businesses to maintain a spotless workplace.</p>
       </div>
       <div class="about-type about-type-passing-by">
+        <span class="about-type-icon"><i class="fa-solid fa-person-walking-luggage"></i></span>
         <h3>Passing By Cleaning</h3>
         <p>Quick, on-the-go cleaning for those who need fast and efficient service while passing through Kabarnet.</p>
       </div>
     </div>
   </section>
 
-  <section class="materials-section">
+  <section class="materials-section slide-up">
     <h2>Materials We Handle</h2>
     <div class="materials-list">
       <div class="material-card material-anim-flip">
-        <div class="material-front">Carpets and Rugs</div>
+        <div class="material-front">
+          <span class="material-icon"><i class="fa-solid fa-rug"></i></span>
+          Carpets and Rugs
+        </div>
         <div class="material-info" style="--info-color: #8B6F4E;">We clean all types of carpets and area rugs, from wool to synthetics.</div>
       </div>
       <div class="material-card material-anim-flip">
-        <div class="material-front">Car carpets and mats</div>
+        <div class="material-front">
+          <span class="material-icon"><i class="fa-solid fa-car-side"></i></span>
+          Car carpets and mats
+        </div>
         <div class="material-info" style="--info-color: #8B6F4E;">We deep clean car carpets and mats, removing dirt and odors for a fresh drive.</div>
       </div>
       <div class="material-card material-anim-flip">
-        <div class="material-front">Upholstery</div>
+        <div class="material-front">
+          <span class="material-icon"><i class="fa-solid fa-couch"></i></span>
+          Upholstery
+        </div>
         <div class="material-info" style="--info-color: #8B6F4E;">We handle sofas, mattresses, and other upholstery, making them spotless and hygienic.</div>
       </div>
     </div>
   </section>
 
-  <section class="process-section">
+  <section class="process-section fade-in">
     <h2>How It Works</h2>
     <div class="process-steps">
       <div class="process-step process-step-1">
@@ -106,36 +121,50 @@
       </div>
     </div>
     <div class="process-cta">
-      <a href="#contact" class="btn-primary">Request a Free Pick Up</a>
+      <a href="https://wa.me/254114233551" class="btn-secondary" target="_blank">Request a Free Pick Up</a>
     </div>
   </section>
 
-  <section class="testimonials">
+  <section class="testimonials slide-up">
     <h2>What Our Customers Say</h2>
     <div class="testimonial-slider">
       <div class="testimonial active">
-        <p>"Safisha Rugs did an amazing job on my carpets! They look brand new. Highly recommend their services."</p>
+        <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
+        <p>"Safisha Rugs did an <span class='highlight'>amazing job</span> on my carpets! They look brand new. <span class='highlight'>Highly recommend</span> their services."</p>
         <span>- Mary K., Kabarnet</span>
       </div>
       <div class="testimonial">
+        <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
         <p>"Professional, friendly, and efficient. My sofa and mattress have never been cleaner!"</p>
         <span>- John L., Kabarnet</span>
       </div>
       <div class="testimonial">
+        <div class="testimonial-avatar"><i class="fa-solid fa-user-circle"></i></div>
         <p>"Booking was easy and the results were fantastic. Will definitely use Safisha Rugs again."</p>
         <span>- Grace T., Kabarnet</span>
       </div>
-      <button class="slider-btn prev">&#10094;</button>
-      <button class="slider-btn next">&#10095;</button>
+      <button class="slider-btn prev" aria-label="Previous testimonial">&#10094;</button>
+      <button class="slider-btn next" aria-label="Next testimonial">&#10095;</button>
+      <div class="testimonial-dots">
+        <span class="dot active" data-index="0"></span>
+        <span class="dot" data-index="1"></span>
+        <span class="dot" data-index="2"></span>
+      </div>
     </div>
   </section>
 
   <footer id="contact">
     <div class="footer-contacts">
-      <a href="tel:+254700000000">Call: +254 700 000 000</a> |
-      <a href="mailto:info@safisharugs.co.ke">Email: info@safisharugs.co.ke</a> |
-      <a href="https://wa.me/254700000000" target="_blank">WhatsApp</a>
+      <a href="tel:+254114233551"><i class="fa-solid fa-phone"></i> Call: 0114233551</a> |
+      <a href="mailto:info@safisharugs.co.ke"><i class="fa-solid fa-envelope"></i> Email: info@safisharugs.co.ke</a> |
+      <a href="https://wa.me/254114233551" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
     </div>
+    <div class="footer-socials">
+      <a href="https://instagram.com/safisharugs" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://wa.me/254114233551" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="mailto:info@safisharugs.co.ke" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+    </div>
+    <button class="back-to-top" onclick="window.scrollTo({top:0,behavior:'smooth'});" aria-label="Back to top"><i class="fa-solid fa-arrow-up"></i></button>
     <p>&copy; 2025 Safisha Rugs, Kabarnet. All rights reserved.</p>
   </footer>
 
@@ -148,15 +177,19 @@
       navbarToggle.classList.toggle('active');
     });
 
-    // Simple testimonial slider
+    // Testimonial slider with navigation dots
     const testimonials = document.querySelectorAll('.testimonial');
     const prevBtn = document.querySelector('.slider-btn.prev');
     const nextBtn = document.querySelector('.slider-btn.next');
+    const dots = document.querySelectorAll('.testimonial-dots .dot');
     let current = 0;
 
     function showTestimonial(index) {
       testimonials.forEach((t, i) => {
         t.classList.toggle('active', i === index);
+      });
+      dots.forEach((d, i) => {
+        d.classList.toggle('active', i === index);
       });
     }
 
@@ -167,6 +200,12 @@
     nextBtn.addEventListener('click', () => {
       current = (current + 1) % testimonials.length;
       showTestimonial(current);
+    });
+    dots.forEach(dot => {
+      dot.addEventListener('click', () => {
+        current = parseInt(dot.getAttribute('data-index'));
+        showTestimonial(current);
+      });
     });
 
     // Per-card animation logic
@@ -180,6 +219,22 @@
         card.classList.remove('show-info');
       });
     });
+
+    // Animate sections on scroll (Intersection Observer)
+    const animatedSections = document.querySelectorAll('.fade-in, .slide-up');
+    const observer = new window.IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in-view');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.18 });
+    animatedSections.forEach(section => {
+      observer.observe(section);
+    });
+    // Add .in-view to trigger animation
+    // .fade-in.in-view and .slide-up.in-view will have opacity:1 and animate in
   </script>
 </body>
 </html> 
