--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Safisha Rugs</title>
+  <title>Contact | Safisha Rugs</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,8 +35,8 @@
       <ul class="navbar-links">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="services.html" class="nav-link active">Services</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="services.html" class="nav-link">Services</a></li>
+        <li><a href="contact.html" class="nav-link active">Contact</a></li>
       </ul>
       <div class="navbar-toggle" id="navbar-toggle">
         <span></span>
@@ -46,37 +46,58 @@
     </div>
   </nav>
 
-  <main class="services-main">
-    <h1 class="services-headline">Our Services</h1>
-    <div class="services-cards">
-      <div class="service-card">
-        <div class="service-icon">🧼</div>
-        <h2>Carpet Cleaning</h2>
-        <p>Professional cleaning for all carpet sizes. We remove dirt, stains, and allergens for a fresh, healthy home.</p>
-        <span class="service-note">(by size)</span>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">🛋️</div>
-        <h2>Sofa Set Steaming</h2>
-        <p>Deep steam cleaning for your sofa set, restoring comfort and appearance while eliminating germs.</p>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">🛏️</div>
-        <h2>Mattress Cleaning</h2>
-        <p>Thorough cleaning to remove dust mites, odors, and stains for a healthier sleep environment.</p>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">🚚</div>
-        <h2>Pickup & Delivery</h2>
-        <p>Convenient pickup and delivery of your carpets and upholstery for a hassle-free experience.</p>
-      </div>
-    </div>
-    <div class="pricing-note">
-      <p>All prices vary slightly depending on fabric and condition.</p>
-    </div>
+  <main class="contact-main">
+    <section class="contact-hero">
+      <h1>Contact Us</h1>
+      <p class="contact-hero-desc">We'd love to hear from you! Reach out to us via your preferred method below and our team will get back to you as soon as possible.</p>
+    </section>
+    <section class="contact-cards">
+      <a href="tel:+254114233551" class="contact-card">
+        <div class="contact-card-icon call"><i class="fa-solid fa-phone"></i></div>
+        <div class="contact-card-title">Call Us</div>
+        <div class="contact-card-detail">+254 114 233 551</div>
+      </a>
+      <a href="https://wa.me/254114233551" class="contact-card" target="_blank">
+        <div class="contact-card-icon whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
+        <div class="contact-card-title">WhatsApp</div>
+        <div class="contact-card-detail">Chat Instantly</div>
+      </a>
+      <a href="mailto:info@safisharugs.co.ke" class="contact-card">
+        <div class="contact-card-icon email"><i class="fa-solid fa-envelope"></i></div>
+        <div class="contact-card-title">Email</div>
+        <div class="contact-card-detail">info@safisharugs.co.ke</div>
+      </a>
+      <a href="https://instagram.com/safisharugs" class="contact-card" target="_blank">
+        <div class="contact-card-icon instagram"><i class="fa-brands fa-instagram"></i></div>
+        <div class="contact-card-title">Instagram</div>
+        <div class="contact-card-detail">@safisharugs</div>
+      </a>
+    </section>
+    <section class="contact-form-section">
+      <h2>Send Us an Inquiry</h2>
+      <form class="contact-form" autocomplete="off" action="contact_submit.php" method="POST">
+        <div class="form-row">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required placeholder="Your Name">
+        </div>
+        <div class="form-row">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required placeholder="you@email.com">
+        </div>
+        <div class="form-row">
+          <label for="phone">Phone <span class="optional">(optional)</span></label>
+          <input type="tel" id="phone" name="phone" placeholder="e.g. 0712 345 678">
+        </div>
+        <div class="form-row">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="4" required placeholder="How can we help you?"></textarea>
+        </div>
+        <button type="submit" class="btn-secondary contact-form-btn">Send Inquiry</button>
+      </form>
+    </section>
   </main>
 
-  <footer id="contact">
+  <footer>
     <div class="footer-contacts">
       <a href="tel:+254114233551"><i class="fa-solid fa-phone"></i> Call: 0114233551</a> |
       <a href="mailto:info@safisharugs.co.ke"><i class="fa-solid fa-envelope"></i> Email: info@safisharugs.co.ke</a> |
@@ -92,8 +113,8 @@
   </footer>
 
   <script>
-     // Navbar toggle for mobile
-     const navbarToggle = document.getElementById('navbar-toggle');
+    // Navbar toggle for mobile
+    const navbarToggle = document.getElementById('navbar-toggle');
     const navbarLinks = document.querySelector('.navbar-links');
     navbarToggle.addEventListener('click', () => {
       navbarLinks.classList.toggle('active');
